[tool.poetry]
name = "adr"
version = "0.19.4"
description = "Utility for running ActiveData recipes"

packages = [
    { include = "adr" },
    { include = "app" },
    { include = "recipes" },
]
include = [
    "adr/util/*",
    "app/*",
    "extra/*",
    "recipes/queries/*",
]

license = "MPL-2.0"
authors = [
    "Andrew Halberstadt <ahalberstadt@mozilla.com>",
    "Trang Nguyen <huyentrang1511@gmail.com>",
]

readme = "README.md"
repository = "https://github.com/mozilla/adr"
homepage = "https://github.com/mozilla/adr"

[tool.poetry.scripts]
adr = "adr.cli:main"
adr-gist = "adr.export.gist:cli"
adr-test = "adr.export.test:cli"
adr-app = "app.app:main"

[tool.poetry.dependencies]
python = ">=3.6,<4"
json-e = "~3"
requests = "~2"
terminaltables = "~3"
pyyaml = "~5"
markdown = "~3"
docutils = "~0"
pygments = "~2"
appdirs = "~1"
tomlkit = "~0"
cachy = "~0"
loguru = "~0"
boto3 = "~1"
taskcluster = ">=38,<40"
zstandard = "~0"

# Optional dependencies
flask = { version = "~1", optional = true }
redis = { version = "~3", optional = true }
python3-memcached = { version = "~1", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-import-order = "^0.18.1"
pytest = "^6.1.1"
tox = "^3.20.1"
sphinx = "^3.1"
sphinx_rtd_theme = "^0.5.0"
codespell = "^2.0"
responses = "^0.12.0"

[tool.poetry.extras]
app = ["flask"]

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
